<resources>
    <string name="app_name">Cafeteria</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">LET\'S GO</string>


    <string name="slide_1_title">Tired Of long Queues?</string>
    <string name="slide_1_desc">Presenting the easiest way to foodOrder food from the cafeteria</string>

    <string name="slide_2_title">Sodexo Card</string>
    <string name="slide_2_desc">We\'ve got a replacement for it</string>

    <string name="slide_3_title">Notifications</string>
    <string name="slide_3_desc">Get Notified about upcoming events and food festivals</string>

    <string name="slide_4_title">Feedback</string>
    <string name="slide_4_desc">Our meal of imporvement</string>

    <string name="slide_5_title">No Beg, Borrow, Steal</string>
    <string name="slide_5_desc">Coz there\'s no \"WE\" in \"FOOD\" </string>

    <string name="slide_6_title">Food</string>
    <string name="slide_6_desc">Love that\'s visible and edible</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_link_to_login">Already registered</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="check_connection">Check Internet Connection</string>
    <string name="btn_link_to_register">+ Create Account</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_back"><![CDATA[< Back]]></string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="sign_out">Sign Out</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_home">Home</string>
    <string name="help">Help</string>
    <string name="Rs">\u20B9</string>
    <string name="action_remove_all_orders">Remove all Orders</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_balance">60</string>


    <string-array name="nav_drawer_labels">
        <item>@string/app_name</item>
        <item>@string/your_orders</item>
        <item>@string/nav_item_history</item>
        <item>@string/action_settings</item>
        <item>@string/nav_item_about_us</item>
    </string-array>
    <string name="title_activity_order_success">OrderSuccessActivity</string>
    <string name="your_orders">Your Orders</string>

</resources>
